sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order_Line__c/PLS_FB_Order_Line__c.object-meta.xml
<CustomObject>
    <label>PLS FB Order Line</label>
    <nameField>
        <displayFormat>LINE-{00000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLS FB Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>