sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order_Line__c/fields/PLS_FB_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Line_Total__c</fullName>
    <label>Line Total</label>
    <type>Currency</type>
    <formula>PLS_FB_Quantity__c * PLS_FB_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>