sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order_Line__c/fields/PLS_FB_Order__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Order__c</fullName>
    <label>Order</label>
    <type>MasterDetail</type>
    <referenceTo>PLS_FB_Order__c</referenceTo>
    <relationshipLabel>PLS FB Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>