sandbox_fixtures/pls_fb_benchmark_v1/force-app/main/default/objects/PLS_FB_Order_Line__c/fields/PLS_FB_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>PLS_FB_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>